added different selector targets

--- a/my_starter_site/css/text_formatting_practcie_styles.css
+++ b/my_starter_site/css/text_formatting_practcie_styles.css
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
 /* TAG SELECTORS */
-=======
->>>>>>> ea62c3cdf7a2c4a6febe6d5c7c3ca2664d692136
 p{
 	/* The times new roman has quotation marks because the
 	name contains spaces */
@@ -13,11 +10,22 @@ h2 {
   font-family: "Arial Black", Gadget, sans-serif;
   font-size: 2em;
   color:#ff0000;
+  /* ALIGN THE TEXT TO THE CENTER */
+  text-align: center;
 }
 p {
   font-family: "Comic Sans MS", cursive;
   font-size: 1.5em;
-<<<<<<< HEAD
+  /* LETTER AND WORD SPACING BETWEEN CHARATERS & WORDSC */
+  letter-spacing: 0.1em;
+  word-spacing: 0.5em;
+ /* THE SPACNG BETWEEN TEXT LINES  */
+ line-height: 1.0	em;
+ /* ALIGN TEXT TO THE LEFT SIDE */
+ /* text-align: left; /* right */ 
+ text-align: justify;
+ /* FIRST LINE INDENT OF A PARAGRAPH */
+ text-indent: 1em;
 }
 /* CLASS SELECTORS */
 /* A type of styling usable for more than one element */
@@ -32,7 +40,7 @@ p {
 	/* Alternatively use a code */
 	color: #cc0000;
 }
-/* TAG-CLASS SELECTORS */
+/* TAG-WITH A CLASS SELECTORS */
 p.important{
 	font-size: 1.5em;
 	font-weight: 900; 
@@ -46,6 +54,3 @@ h1.important{
 	font-size: 2.5em;
 }
 
-=======
-}
->>>>>>> ea62c3cdf7a2c4a6febe6d5c7c3ca2664d692136
